<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">



   <EditText
       android:id="@+id/edit_distance"
       android:inputType="number"
       android:layout_marginTop="8dp"
       android:layout_width="match_parent"
       android:hint="@string/distance"
       android:layout_height="wrap_content"
       />
   <TextView
       android:layout_width="match_parent"
       android:gravity="center"
       android:text="@string/total_km"
       android:layout_height="wrap_content"/>

   <EditText
       android:id="@+id/edit_price"
       android:inputType="numberDecimal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/price"/>
   <TextView
       android:layout_width="match_parent"
       android:gravity="center"
       android:text="@string/price_per_liter"
       android:layout_height="wrap_content"/>
   <EditText
       android:id="@+id/edit_autonomy"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/autonomy"/>
   <TextView
       android:layout_width="match_parent"
       android:inputType="numberDecimal"
       android:gravity="center"
       android:text="@string/kms_per_liter"
       android:layout_height="wrap_content"/>
   <TextView
       android:layout_width="match_parent"
       android:gravity="center"
       android:layout_marginTop="20dp"
       android:textAllCaps="true"
       android:textSize="28dp"
       android:text="@string/total_spend"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/text_total_value"
       android:layout_width="match_parent"
       android:gravity="center"
       android:layout_marginTop="16dp"
       android:textAllCaps="true"
       android:textSize="38sp"
       android:text="@string/total_value"
       android:layout_height="wrap_content"
       android:textColor="@color/purple_700"/>

   <Button
       android:id="@+id/button_calculate"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_marginTop="32dp"
       android:textSize="28sp"
       android:padding="16dp"
       android:backgroundTint="@color/teal_200"
       android:text="CALCULAR"
       />

</LinearLayout>